--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -17,10 +17,22 @@ This course is designed to get you working with data related to crime and crimin
 ##Rationale
 
 
-You may have heard some myths about how [data science is the sexiest job of the 21st century](https://hbr.org/2012/10/data-scientist-the-sexiest-job-of-the-21st-century). This is not true. [Firefighting is obviously sexier, since that's where the calendars come from.](http://adversariallearning.com/episode-12-data-science-myths.html).  Nevertheless, data is [EVERYWHERE](https://www.economist.com/news/leaders/21721656-data-economy-demands-new-approach-antitrust-rules-worlds-most-valuable-resource). And as responsible citizens there is an expectation of [data literacy](https://www.forbes.com/sites/homaycotte/2014/10/28/data-literacy-what-it-is-and-why-none-of-us-have-it/) placed upon you by our current circumstances. No matter the job you end up in, it is very likely that you will have contact with some form of data. At the very least you will be a consumer of data through reading/ watching the news. And it's important that you understand what you see. 
+> Imagine you assembled an extensive library comprised of the finest literary works in the world. How valuable would it be to someone who is illiterate? Until they can read and appreciate it, the library remains just a useless collection of inked paper. Similarly, all of the rich data visualizations and intelligence built into today’s self-service analytics tools can be negated by a simple deficiency in data literacy, which can be defined as the ability to understand, use and communicate data effectively. Increasingly, this data literacy divide will impede organizations of all shapes and sizes from reaping higher rewards from their data investments.
+
+- [Why companies must close the data literacy gap](https://www.forbes.com/sites/brentdykes/2017/03/09/why-companies-must-close-the-data-literacy-divide/#9e4276c369d9)
 
 
-[The UK has a shortage of social scientists trained in quantitative methods and consequently is unable to meet the demand from employers across all sectors – academia, government, charities and business – for staff who can apply such methods to evaluating evidence and analysing data](http://www.nuffieldfoundation.org/sites/default/files/files/QM%20Programme%20Background_v_FINAL.pdf). So not only is this a vital skill, it is one that will (for now) give you a competitive advantage in your employability. Doing well in this course and it's 2nd term counterpart, Modelling Criminological Data also opens up the possibility to parttake in a [Q-step internship](http://www.humanities.manchester.ac.uk/q-step/internships/). These things are really cool - you get placed with an organisation such as the Home Office, or College of Policing, or more, work on an interesting project, and get paid. Pretty nice way to spend a month or so of your summer. You will hear more about these but some detail is available on the [Q-step website](http://www.humanities.manchester.ac.uk/q-step/internships/)
+Every day more and more data are being generated about the world arouns us. It is important that we posess the ability to make sense of these data, and to use them to draw meaningful conclusions about the phenomena in which we are interested. 
+
+> The UK has a shortage of social scientists trained in quantitative methods and consequently is unable to meet the demand from employers across all sectors – academia, government, charities and business – for staff who can apply such methods to evaluating evidence and analysing data
+
+- [Nuffield Foundation](http://www.nuffieldfoundation.org/sites/default/files/files/QM%20Programme%20Background_v_FINAL.pdf). 
+
+
+So not only is this a vital skill, it is one that will (for now) give you a competitive advantage in your employability. Doing well in this course and it's 2nd term counterpart, Modelling Criminological Data also opens up the possibility to parttake in a [Q-step internship](http://www.humanities.manchester.ac.uk/q-step/internships/). These things are really cool - you get placed with an organisation such as the Home Office, or College of Policing, or more, work on an interesting project, and get paid. Pretty nice way to spend a month or so of your summer. You will hear more about these but some detail is available on the [Q-step website](http://www.humanities.manchester.ac.uk/q-step/internships/) 
+
+
+This course will put you on the right track to acquiring the transferable skills that make you employable in the field of data analysis, which has plenty of jobs in criminal justice. You could for example consider a career as a [Criminal Intelligence Analyst](https://nationalcareersservice.direct.gov.uk/job-profiles/criminal-intelligence-analyst). But there are many many other options as well, and currently there are more jobs than people to fill them. In fact, you may have heard some myths about how [data science is the sexiest job of the 21st century](https://hbr.org/2012/10/data-scientist-the-sexiest-job-of-the-21st-century). This is not true. [Firefighting is obviously sexier, since that's where the calendars come from.](http://adversariallearning.com/episode-12-data-science-myths.html).  Nevertheless, data is [EVERYWHERE](https://www.economist.com/news/leaders/21721656-data-economy-demands-new-approach-antitrust-rules-worlds-most-valuable-resource). And as responsible citizens there is an expectation of [data literacy](https://www.forbes.com/sites/homaycotte/2014/10/28/data-literacy-what-it-is-and-why-none-of-us-have-it/) placed upon you by our current circumstances. No matter the job you end up in, it is very likely that you will have contact with some form of data. At the very least you will be a consumer of data through reading/ watching the news. And it's important that you understand what you see. 
 
 
 This course is designed to make you data literate criminologists, who can not only consume data in an informed manner, use it as evidence to support your arguments, or to question those made by others, and draw meaningful conclusions from the ever-increasing firehose of data being generated in our domain.  
