--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -29,6 +29,9 @@ Every day more and more data are being generated about the world arouns us. It i
 - [Nuffield Foundation](http://www.nuffieldfoundation.org/sites/default/files/files/QM%20Programme%20Background_v_FINAL.pdf). 
 
 
+In fact, recent numbers show that [About 4 in 5 UK adults have low numeracy levels which costs the UK £billions.](https://www.nationalnumeracy.org.uk/what-issue)
+
+
 So not only is this a vital skill, it is one that will (for now) give you a competitive advantage in your employability. Doing well in this course and it's 2nd term counterpart, Modelling Criminological Data also opens up the possibility to parttake in a [Q-step internship](http://www.humanities.manchester.ac.uk/q-step/internships/). These things are really cool - you get placed with an organisation such as the Home Office, or College of Policing, or more, work on an interesting project, and get paid. Pretty nice way to spend a month or so of your summer. You will hear more about these but some detail is available on the [Q-step website](http://www.humanities.manchester.ac.uk/q-step/internships/) 
 
 
